// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextFileUpload snapshot, validation is in the default state 1`] = `
<div
  className="pf-v6-c-file-upload"
  data-testid="text-file-upload-id"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={null}
>
  <div
    className="pf-v6-c-file-upload__file-select"
  >
    <div
      className="pf-v6-c-input-group"
    >
      <div
        className="pf-v6-c-input-group__item pf-m-fill"
      >
        <span
          className="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid={false}
            aria-label="Drag end drop file here"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe={true}
            disabled={false}
            id="text-file-upload-id-filename"
            name="text-file-upload-id-filename"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Drag end drop file here"
            readOnly={true}
            required={false}
            type="text"
            value=""
          />
        </span>
      </div>
      <div
        className="pf-v6-c-input-group__item"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__text"
          >
            Upload
          </span>
        </button>
      </div>
      <div
        className="pf-v6-c-input-group__item"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          tabIndex={null}
          type="button"
        >
          <span
            className="pf-v6-c-button__text"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="pf-v6-c-file-upload__file-details"
  >
    <span
      className="pf-v6-c-form-control pf-m-textarea pf-m-resize-vertical"
    >
      <textarea
        aria-invalid={false}
        aria-label="File upload"
        disabled={false}
        id="text-file-upload-id"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Paste your content here"
        readOnly={false}
        required={true}
        value=""
      />
    </span>
  </div>
  <input
    hidden={true}
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        "border": 0,
        "clip": "rect(0, 0, 0, 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    tabIndex={-1}
    type="file"
  />
</div>
`;

exports[`TextFileUpload snapshot, validation is in the error state 1`] = `
<div
  className="pf-v6-c-file-upload"
  data-testid="text-file-upload-id"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  role="presentation"
  tabIndex={null}
>
  <div
    className="pf-v6-c-file-upload__file-select"
  >
    <div
      className="pf-v6-c-input-group"
    >
      <div
        className="pf-v6-c-input-group__item pf-m-fill"
      >
        <span
          className="pf-v6-c-form-control pf-m-readonly"
        >
          <input
            aria-invalid={false}
            aria-label="Drag end drop file here"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe={true}
            disabled={false}
            id="text-file-upload-id-filename"
            name="text-file-upload-id-filename"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Drag end drop file here"
            readOnly={true}
            required={false}
            type="text"
            value=""
          />
        </span>
      </div>
      <div
        className="pf-v6-c-input-group__item"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-3"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="pf-v6-c-button__text"
          >
            Upload
          </span>
        </button>
      </div>
      <div
        className="pf-v6-c-input-group__item"
      >
        <button
          aria-label={null}
          className="pf-v6-c-button pf-m-control"
          data-ouia-component-id="OUIA-Generated-Button-control-4"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe={true}
          disabled={true}
          onClick={[Function]}
          tabIndex={null}
          type="button"
        >
          <span
            className="pf-v6-c-button__text"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="pf-v6-c-file-upload__file-details"
  >
    <span
      className="pf-v6-c-form-control pf-m-textarea pf-m-resize-vertical pf-m-error"
    >
      <textarea
        aria-invalid={true}
        aria-label="File upload"
        disabled={false}
        id="text-file-upload-id"
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Paste your content here"
        readOnly={false}
        required={true}
        value=""
      />
      <span
        className="pf-v6-c-form-control__utilities"
      >
        <span
          className="pf-v6-c-form-control__icon pf-m-status"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
  <input
    hidden={true}
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    style={
      {
        "border": 0,
        "clip": "rect(0, 0, 0, 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    tabIndex={-1}
    type="file"
  />
</div>
`;
